[workspace]
members = ["programs/*"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
solana-banks-interface = "=1.18.22"
solana-program = "=1.18.22"
solana-sdk = "=1.18.22"
solana-program-test = "=1.18.22"
solana-client = "=1.18.22"
solana-cli-output = "=1.18.22"
solana-transaction-status = "=1.18.22"
solana-account-decoder = "=1.18.22"
solana-rpc = "=1.18.22"


[patch.crates-io]
"solana-program" = { git = "https://github.com/lightprotocol/agave", branch = "v1.18.22-enforce-cpi-tracking" }
